# abbyy-cpp-algo

./: .gitignore  README.md
task1/: README.md  Result.txt
task1/task1.4/: task1.4.cpp
task1/task1.5/: main.cpp
task1/task1.6/: CMakeLists.txt  README.md  main.cpp
task1/task1.6/source/: CMakeLists.txt  deals.cpp  market.cpp  operations.cpp
task1/task1.6/tests/: tests.cpp
task2/: README.md
task2/task2.1/: README.md  solution.cpp
task2/task2.2/: README.md  solution.cpp
task2/task2.3/: README.md  solution.cpp
task2/task2.4/: README.md  solution.cpp
task3/: README.md
task3/task3.1/: README.md  solution.cpp
task3/task3.2/: README.md  solution.cpp
task3/task3.3/: README.md  solution.cpp
task3/task3.4/: README.md  solution.cpp  solution_fast.cpp
task4/: README.md
task4/task4.1/: solution.cpp
task4/task4.2/: solution.cpp
task4/task4.3/: solution.cpp
task4/task4.4/: input.txt  solution.cpp
task4/task4.5/: README.md
task4/task4.6/: solution.cpp
task4/task4.7/: README.md  solution.cpp
task4/task4.8/: README.md  solution.cpp
task5/: README.md
task5/task5.1/: README.md  solution.cpp
task5/task5.2/: README.md  solution.cpp
task5/task5.3/: README.md  solution.cpp
task6/: README.md
task6/task6.1/: README.md  solution.cpp
task6/task6.2/: README.md  solution.cpp
task6/task6.3/: README.md  solution.cpp
task6/task6.4/: README.md  solution.cpp
